--- a/pages/index/signin.wxss
+++ b/pages/index/signin.wxss
@@ -204,7 +204,7 @@ page{
 }
 
 .index-real-ibox{
-  display:none;
+  /* display:none; */
   position:absolute;
   top:50%;left:50%;
   margin:-230rpx 0 0 -270rpx;
