--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -56,7 +56,7 @@
   </view>
 
   <!-- 设置按钮 -->
-  <view class="set-btn" catchtap='bindSetGuess'>
+  <view wx:if='{{isAdmin}}'class="set-btn" catchtap='bindSetGuess' data-id='ajax'>
     <image src="img/set-btn.png" ></image>
   </view>
 
