--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -3,10 +3,10 @@
   <scroll-view class="container" scroll-y   catchtouchend='bindIsScroll' 
   scroll-into-view='{{isScroll ? "":"n"}}last{{danmakuList.length}}'>
     <view class="connect">
-      <view wx:if="{{isConnect}}">正在连接弹幕服务器...</view>
+      <view wx:if="{{!isConnect}}">正在连接弹幕服务器...</view>
       <view wx:if="{{isError}}">服务器开小差了，请退出该页面，重新进入再试一下，再试一下，请一定再试一下！</view>
     </view>
-    <view class="welcome" wx:if="{{!isConnect}}">欢迎<view class="name">{{userInfo.nickName}}</view>进入<view class="color">【战旗直播年终狂欢】</view>请尽情的为战旗打CALL!更有丰富的弹幕礼物，等你来领！</view>
+    <view class="welcome" wx:if="{{isConnect}}">欢迎<view class="name">{{userInfo.nickName}}</view>进入<view class="color">【战旗直播年终狂欢】</view>请尽情的为战旗打CALL!更有丰富的弹幕礼物，等你来领！</view>
     <!-- 聊天区域 -->
     <!--自己加 myself 类-->
     <view class="chat-li {{item.token==uid ?'myself':''}}" wx:key wx:for="{{danmakuList}}">
@@ -17,11 +17,11 @@
     <view id='last{{danmakuList.length}}'></view>
   </scroll-view>
   <!-- 激活速弹加类 active-fast -->
-  <view class="chat-bottom {{isHot ? 'active-fast':''}}" wx:if="{{uid}}">
+  <view class="chat-bottom {{isHot ? 'active-fast':''}}" wx:if="{{isVerify}}">
     <view class="chat-input-area">
-      <input class="input-area" value='{{danmakuContent}}' bindinput='bindKeyInput'></input>
+      <input class="input-area"  bindinput='bindKeyInput'></input>
       <!-- 不能发送加类 disable -->
-      <view class="send {{danmakuContent.length>0?'':'disable'}}" catchtap='bindSendDanmaku'>
+      <view class="send {{isDisable?'':'disable'}}" catchtap='bindSendDanmaku'>
         <image src="img/send.png"></image>
       </view>
       <view class="fast" catchtap='bindHotShow'>
@@ -51,7 +51,7 @@
   </view>
 
   <!-- 竞猜按钮 -->
-  <view class="guess-btn" catchtap='bindGuessLayer'>
+  <view class="guess-btn" catchtap='bindGuessLayer' data-id='ajax'>
     <image src="img/guess-btn.png" ></image>
   </view>
 
@@ -144,21 +144,21 @@
     <!-- 开启竞猜加类 begin-guess -->
     <view class="set-btn-area {{isSetGuessBegin?'begin-guess':''}}" catchtap='bindSetGuessBegin'>
       <view class="btn-bg">
-        <view class="set-ibox-btn">{{isSetGuessBegin?'已开启':'已关闭'}}</view>
+        <view class="set-ibox-btn">{{isSetGuessBegin?'开启':'关闭'}}</view>
       </view>
     </view>
     <view class="mid-title">竞彩结果设置</view>
     <view class="set-choose">
       <!-- 选中加类 active -->
-      <view class="choose {{setGuessResult==='A'?'active':''}}" data-id='A' catchtap='bindChooseGuess'>
+      <view class="choose {{(setGuessResult==='A' && !isSetGuessBegin)?'active':''}}" data-id='A' catchtap='bindChooseGuess'>
         <view class="choose-1">A</view>
       </view>
-      <view class="choose {{setGuessResult==='B'?'active':''}}" data-id='B' catchtap='bindChooseGuess'>
+      <view class="choose {{(setGuessResult==='B' && !isSetGuessBegin)?'active':''}}" data-id='B' catchtap='bindChooseGuess'>
         <view class="choose-2">B</view>
       </view>
     </view>
     <!-- 激活以后加类 active-set-btn -->
-    <view class="set-real-btn active-set-btn"  catchtap='bindSetGuessAffirm'>确　定</view>
+    <view class="set-real-btn {{isSetGuessBegin?'active-set-btn':setGuessResult !=''?'active-set-btn':''}}"  catchtap='bindSetGuessAffirm' data-id="{{isSetGuessBegin?'ok':setGuessResult !=''?'ok':'no'}}">确　定</view>
   </view>
 
 </view>
