--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -1,6 +1,6 @@
 <view class="chat-content">
   <image class="chat-bg" src="img/bg.jpg"></image>
-  <scroll-view class="container" scroll-y   catchtouchend='bindIsScroll' 
+  <scroll-view class="container" scroll-y  catchtouchend='bindTips'   catchlongpress='bindIsScroll' 
   scroll-into-view='{{isScroll ? "":"n"}}last{{danmakuList.length}}'>
     <view class="connect">
       <view wx:if="{{!isConnect}}">正在连接弹幕服务器...</view>
