--- a/pages/barrage/index.wxss
+++ b/pages/barrage/index.wxss
@@ -93,7 +93,7 @@ page .container{
   padding:0 18rpx;
   width:424rpx;
   border:2rpx solid #0ba1e9;
-  background:rgba(7,46,135,.8);
+  background:rgba(7,46,135,1);
   font-size:32rpx;color:#f4fbff;
 }
 
