--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -142,14 +142,14 @@
     </view>
     <view class="set-title-tp">红毯投票按钮</view>
     <!-- 开启加类 tp-begin -->
-    <view class="set-tp-btn tp-begin">开启</view>
+    <view class="set-tp-btn {{voteState?'tp-begin':''}}" catchtap='bindSetVote'>{{voteState ?'点击关闭':'点击开启'}}</view>
     <view class="set-title">竞彩开始／关闭按钮</view>
     <!-- 开启竞猜加类 begin-guess -->
     <view class="set-btn-area {{!isSetGuessBegin?'begin-guess':''}}">
       <view class="btn-bg">
         <view class="set-ibox-btn">{{!isSetGuessBegin?'开启':'关闭'}}</view>
       </view>
-      <view class="nums-guess">这是第<text class="text">3</text>次竞猜</view>
+      <view class="nums-guess">这是第<text class="text">{{guessNumber}}</text>次竞猜</view>
     </view>
     <view class="mid-title" wx:if='{{isSetGuessBegin}}'>竞彩结果设置</view>
     <view class="set-choose" wx:if='{{isSetGuessBegin}}'>
@@ -166,77 +166,32 @@
   </view>
 
   <!-- 投票按钮 -->
-  <view class="tp-btn">
+  <view class="tp-btn" catchtap='bindChooseVote'>
     <image src="img/tp-btn.png"></image>
   </view>
   <!-- 投票按钮End -->
 
   <!-- 投票弹窗 -->
-  <view class="tp-ibox">
+  <view class="tp-ibox" wx:if='{{voteBoxState}}'>
     <image src="img/tp-ibox.png" class="tp-ibox-bg"></image>
-    <view class="tp-ibox-content">
+    <view class='close' catchtap='bindCloseVoteLayer'></view>
+    <scroll-view scroll-y class="tp-ibox-content">
       <ul class="tp-ul">
         <!-- 选中加类 active -->
-        <li class="tp-li active">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
-        </li>
-        <li class="tp-li">
-          <image src="img/checker.png" class="checker"></image>
-          <image src="img/check.png" class="check"></image>
-          <view class="tp-name">斯蒂芬</view>
+        <li class="tp-li active" catchtap='bindChooseItem'  wx:key wx:for='{{voteList}}' data-flag='{{item.uvoted}}' data-id='{{item.id}}'>
+            <image src="img/checker.png" class="check" wx:if='{{item.uvoted}}'></image>  
+           <image src="img/check.png" class="check" wx:else></image> 
+          <view class="tp-name">{{item.nickname}}</view>
         </li>
       </ul>
-    </view>
+    </scroll-view>
   </view>
 
   <!-- 投票确认弹窗 -->
-  <view class="tp-real-ibox">
-    <image src="tp-ibox-1.png"></image>
-    <view class="title">还没开始</view>
-    <view class="btn-ok"></view>
-    <view class="btn-no"></view>
+  <view class="tp-real-ibox" wx:if='{{voteLayerState}}'>
+    <image src="img/tp-ibox-1.png"></image>
+    <view class="title">{{voteLayerMsg}}</view>
+    <view class="btn-no" catchtap='bindCancelVote'></view>
+    <view class="btn-ok" catchtap='bindCommitVote' data-ajax='{{voteAjax}}'></view>
   </view>
-
 </view>
